--- a/kompliziert/src/main/res/layout/hint_overlay.xml
+++ b/kompliziert/src/main/res/layout/hint_overlay.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="vertical"
-                android:background="@color/colorPrimary"
+                android:background="@color/hintBackgroundColor"
                 android:layout_width="match_parent"
                 android:clickable="true"
-                android:id="@+id/rlHintOverlay"
+                android:id="@+id/hintOverlay"
                 android:layout_height="match_parent"
                 android:focusable="true">
 
