--- a/kompliziert/src/main/res/layout/hint_overlay.xml
+++ b/kompliziert/src/main/res/layout/hint_overlay.xml
@@ -5,6 +5,7 @@
                 android:layout_width="match_parent"
                 android:clickable="true"
                 android:id="@+id/hintOverlay"
+                android:visibility="invisible"
                 android:layout_height="match_parent"
                 android:focusable="true">
 
