--- a/kompliziert/src/main/res/layout/hint_icon.xml
+++ b/kompliziert/src/main/res/layout/hint_icon.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ivHintIcon"
-           android:layout_width="66dp"
-           android:layout_height="66dp"
-           android:layout_margin="6dp"
-           android:padding="14dp"
+           android:layout_width="@dimen/hint_icon_dimen"
+           android:layout_height="@dimen/hint_icon_dimen"
+           android:layout_margin="@dimen/hint_icon_margin"
+           android:padding="@dimen/hint_icon_padding"
            android:scaleType="fitCenter"
            android:background="@drawable/hint_default_icon_background"
            android:src="@drawable/ic_hint_default_icon_white_32dp"/>
