--- a/demo/src/main/res/values/colors.xml
+++ b/demo/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="hintIconBackgroundGradientStart">#008577</color>
+    <color name="hintIconBackgroundGradientEnd">#00574B</color>
 </resources>
