#3: Configure hint background through code.

--- a/demo/src/main/res/values/colors.xml
+++ b/demo/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
-    <color name="hintIconBackgroundGradientStart">#008577</color>
-    <color name="hintIconBackgroundGradientEnd">#00574B</color>
+    <color name="hintIconGradientStart">#D81B60</color>
+    <color name="hintIconGradientEnd">#B8124D</color>
 </resources>
